--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -2,7 +2,7 @@
 <nav class="relative">
   <div class="absolute inset-x-0 z-50 grid pt-8 pb-16 bg-white shadow-xl grid-cols-layout md:pt-12 top-full" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown'">
 
-    <div class="col-feature">
+    <div class="col-wide">
       <div class="grid gap-3 md:gap-6 md:grid-flow-col-dense md:grid-cols-9 md:grid-rows-[1fr_auto]">
 
         {# Min side #}
