--- a/src/pages/sok/sok.njk
+++ b/src/pages/sok/sok.njk
@@ -8,7 +8,7 @@ tags: ['template']
 
 {% block content %}
   <main class="min-h-[61vh] py-8 text-lg md:pt-12 md:pb-20 text-gray-900 grid grid-cols-layout">
-    <div class="col-content md:col-feature md:grid md:grid-cols-[1.8fr_1.2fr] md:gap-x-12 items-start" x-data="{ filterOpen: false, searchFilter: 'innhold' }">
+    <div class="col-narrow md:col-wide md:grid md:grid-cols-[1.8fr_1.2fr] md:gap-x-12 items-start" x-data="{ filterOpen: false, searchFilter: 'innhold' }">
 
       {# Tittel og søkefelt #}
       <div class="col-start-1 row-start-1">
