--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -27,7 +27,7 @@
     </div>
   </div>
 
-  <nav class="flex items-center w-full gap-8 col-feature">
+  <nav class="flex items-center w-full gap-8 col-wide">
     {# Logo #}
     <a href="/" class="text-red-500 fine:hover:text-red-400 block focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 py-2.5 px-2 -mx-2 rounded-sm">
       {{ '/src/_includes/svg/logo.svg' | svgContents('w-[75px] h-auto') | safe }}
