--- a/src/_includes/partials/prototypeNav.njk
+++ b/src/_includes/partials/prototypeNav.njk
@@ -1,7 +1,7 @@
 <aside x-ref="prototypeMenu" aria-label="Sider i prototypen" class="grid items-center min-h-screen font-mono text-xl text-white bg-black md:text-2xl">
   <div class="grid grid-cols-layout py-clamp-gap">
-    <h2 class="text-base font-semibold tracking-widest uppercase col-feature text-deepblue-300">Sider i prototypen</h2>
-    <ul class="list-decimal list-outside divide-y pl-11 divide-gray-400/25 col-feature">
+    <h2 class="text-base font-semibold tracking-widest uppercase col-wide text-deepblue-300">Sider i prototypen</h2>
+    <ul class="divide-y divide-gray-400/25 col-wide">
     {% for page in collections.template | sort(false, false, 'data.order') %}
       <li class="">
         <a href="{{ page.url }}" class="inline-block py-4 fine:hover:text-blue-300 fine:hover:underline decoration-from-font underline-offset-4">
