--- a/src/pages/kontor/kontor.njk
+++ b/src/pages/kontor/kontor.njk
@@ -1,8 +1,7 @@
 ---
-title: 'Kontor'
+title: 'Kontorside'
 description: ''
-tags:
-  - template
+tags: ['template']
 order: 3
 bodyClass: 'bg-white'
 ---
@@ -12,7 +11,7 @@ bodyClass: 'bg-white'
   <main class="min-h-[61vh] text-lg text-gray-800">
 
     <div class="grid pt-8 pb-4 grid-cols-layout ">
-      <div class="col-content">
+      <div class="col-narrow">
         <h1 class="text-3xl font-semibold leading-tight text-gray-900 md:text-4xl">
           NAV Andeby
         </h1>
@@ -27,7 +26,7 @@ bodyClass: 'bg-white'
     </div>
 
     <div class="grid pt-4 pb-20 grid-cols-layout md:pt-6">
-      <div class="col-content">
+      <div class="col-narrow">
         <div class="max-w-prose">
 
           <div class="p-8 bg-orange-50">
@@ -80,7 +79,7 @@ bodyClass: 'bg-white'
     </div>
 
     <div class="grid pb-12 bg-gray-100 grid-cols-layout">
-      <div class="col-content">
+      <div class="col-narrow">
         <div class="max-w-prose">
 
           {% for box in boxes %}
