--- a/src/pages/produktoversikt/arbeidsgiver/arbeidsgiver.njk
+++ b/src/pages/produktoversikt/arbeidsgiver/arbeidsgiver.njk
@@ -1,8 +1,6 @@
 ---
 title: 'Søknad og skjema fra A til Å'
 description: 'Pengestøtter og tjenester fra NAV for arbeidsgivere. Du kan søke eller filtrere etter type og område.'
-order: 6
-bodyClass: ''
 permalink: '/produktoversikt-arbeidsgiver/'
 ---
 {% extends 'base.njk' %}
@@ -64,7 +62,7 @@ permalink: '/produktoversikt-arbeidsgiver/'
       });
       updateCount()">
     <div class="grid grid-cols-layout">
-      <div class="relative w-full col-content lg:col-feature">
+      <div class="relative w-full col-narrow lg:col-wide">
 
         <div class="hidden float-right pb-8 mt-2 ml-24 xs:block sm:pb-0 sm:-mb-8">
           {{ '/src/_includes/svg/pictograms/support.svg' | svgContents('w-[12vw] h-auto overflow-hidden max-w-[7rem] aspect-square') | safe }}
@@ -77,9 +75,9 @@ permalink: '/produktoversikt-arbeidsgiver/'
     </div>
 
     <div class="grid mt-8 lg:mt-12 grid-cols-layout">
-      <div class="grid w-full gap-8 pb-20 lg:gap-x-16 lg:items-start lg:grid-cols-sidebar col-content lg:col-feature">
+      <div class="grid w-full gap-8 pb-20 lg:gap-x-16 lg:items-start lg:grid-cols-sidebar col-narrow lg:col-wide">
 
-        <div class="relative lg:row-start-1 lg:row-span-3 lg:col-start-2 lg:sticky lg:top-4" x-data="{ filterDrawer: false }">
+        <div class="relative lg:row-start-1 lg:row-span-3 lg:col-start-2" x-data="{ filterDrawer: false }">
           <button
             class="flex items-center justify-start gap-2.5 pl-3 pr-4 py-3 leading-none text-blue-600 bg-white rounded ring-2 ring-blue-500 hover:bg-blue-100 hover:text-blue-700 lg:hidden"
             x-on:click="filterDrawer = true"
@@ -98,7 +96,7 @@ permalink: '/produktoversikt-arbeidsgiver/'
             x-transition:leave-start="translate-x-0 opacity-100"
             x-transition:leave-end="translate-x-full opacity-0"
           >
-            <form class="flex flex-col h-full bg-white shadow-drawer col-content lg:hidden" x-on:click.outside="filterDrawer = false, filterTags = false">
+            <form class="flex flex-col h-full bg-white shadow-drawer col-narrow lg:hidden" x-on:click.outside="filterDrawer = false, filterTags = false">
               <div class="flex-1 px-6 pb-12 overflow-y-auto overscroll-y-contain">
                 <div class="relative grid pt-6" >
                   <div>
