--- a/src/pages/soknad-og-skjema/soknad-og-skjema.njk
+++ b/src/pages/soknad-og-skjema/soknad-og-skjema.njk
@@ -1,29 +1,38 @@
 ---
-title: 'Standardoppsett for søknad'
+title: 'Søknadside'
 description: 'Grunnoppsett for søknader'
-order: 8
+order: 10
 tags: ['template']
 ---
-{% extends 'base.njk' %}
+{% extends 'base-basic.njk' %}
 
 {% block content %}
   <main class="min-h-[61vh] text-lg text-gray-900">
-    <div class="grid py-8 bg-white grid-cols-layout md:pt-12 md:pb-20 ">
-      <div class="col-feature">
-        <h1 class="text-3xl font-semibold leading-tight md:text-4xl">Søknad om dagpenger</h1>
-
-        <div class="mt-3 md:grid md:grid-flow-row-dense md:gap-20 md:grid-cols-12">
-          <div class="mb-3 -mx-3 md:col-span-8 md:hidden" x-data="{ stepperOpen: false }" x-bind:class="stepperOpen && 'bg-gray-50 xs:rounded md:bg-transparent'">
-            <div class="relative px-3 py-3 fine:hover:bg-blue-50 xs:rounded">
+    <div class="grid bg-white grid-cols-layout ">
+      <div class="relative flex justify-between pt-8 col-narrow lg:col-normal">
+        <div class="order-2 hidden ml-24 xs:block">
+          {{ '/src/_includes/svg/pictograms/soknad-og-skjema.svg' | svgContents('w-[12vw] h-auto overflow-hidden max-w-[6rem]') | safe }}
+        </div>
+        <div>
+          <p class="mt-3 text-base tracking-wider uppercase opacity-70">
+            Søknad
+          </p>
+          <h1 class="mt-1 text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">Søknad om dagpenger</h1>
+        </div>
+      </div>
+      <div class="relative py-8 col-narrow lg:col-normal">
+        <div class="md:grid md:grid-flow-row-dense md:gap-20 md:grid-cols-[2.2fr_0.8fr]">
+          <div class="mb-3 -mx-3 md:col-start-1 md:hidden" x-data="{ stepperOpen: false }" x-bind:class="stepperOpen && 'bg-gray-50 xs:rounded md:bg-transparent'">
+            <div class="relative py-3 pr-3 pl-9 fine:hover:bg-blue-50 xs:rounded">
               <p class="text-sm">Steg 5 av 14</p>
               <div class="flex items-center gap-3 ">
                 <h2 class="text-2xl font-semibold">Arbeidsforhold i EØS</h2>
-                <button class="absolute inset-0" x-on:click="stepperOpen = !stepperOpen">
+                <button class="absolute inset-0 flex items-end px-2 pb-5" x-on:click="stepperOpen = !stepperOpen">
                   <span class="sr-only">Vis seksjoner</span>
+                  <svg class="flex-none w-6 h-6 pointer-events-none" x-bind:class="stepperOpen && 'rotate-180'" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false" >
+                    <path d="M18 9L12 15L6 9" stroke="currentColor" stroke-width="2" />
+                  </svg>
                 </button>
-                <svg class="flex-none w-6 h-6 pointer-events-none" x-bind:class="stepperOpen && 'rotate-180'" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false" >
-                  <path d="M18 9L12 15L6 9" stroke="currentColor" stroke-width="2" />
-                </svg>
               </div>
             </div>
             <div class="px-4 py-3" x-show="stepperOpen">
@@ -52,7 +61,7 @@ tags: ['template']
             </div>
           </div>
 
-          <div class="hidden pt-10 md:block md:col-span-4 md:col-start-9">
+          <div class="hidden pt-10 md:block md:col-start-2">
             <ol class="navds-stepper">
               {% for item in stepperList %}
                 <li class="navds-stepper__item">
@@ -76,7 +85,7 @@ tags: ['template']
             </ol>
           </div>
 
-          <div class="mt-6 md:col-span-8">
+          <div class="mt-6 md:mt-0 md:col-start-1">
             <div class="max-w-prose">
               <div class="hidden mt-6 mb-4 md:block">
                 <p class="text-sm">Steg 5 av 14</p>
@@ -87,11 +96,11 @@ tags: ['template']
 
               <div class="mt-6">
                 <label class="font-semibold" for="country">Hvilket land bor du i?</label>
-                <p class="">Med bostedsland mener vi ditt vanlige oppholdssted, som er der du eier eller leier bolig og tilbringer mesteparten av tiden din.</p>
-                <select id="country" class="select w-full px-2.5 py-1.5 mt-2 border border-gray-300 rounded appearance-none">
-                  <option value="1">Velg land</option>
-                  <option value="2">Sveits</option>
-                  <option value="3">Ikke Sveits</option>
+                <p class="text-base">Med bostedsland mener vi ditt vanlige oppholdssted, som er der du eier eller leier bolig og tilbringer mesteparten av tiden din.</p>
+                <select id="country" class="select w-full px-2.5 py-2 mt-3 border border-gray-300 rounded appearance-none">
+                  <option checked>Velg land</option>
+                  <option value="1">Sveits</option>
+                  <option value="2">Ikke Sveits</option>
                 </select>
               </label>
             </div>
