--- a/src/pages/tom/tom.njk
+++ b/src/pages/tom/tom.njk
@@ -1,14 +1,13 @@
 ---
 title: 'Tom side'
 description: ''
-order: 10
-bodyClass: ''
+order: 99
 tags: ['template']
 ---
 {% extends 'base-new.njk' %}
 
 {% block content %}
-  <main class="grid py-12 min-h-[36vh] lg:min-h-[48vh] grid-cols-layout items-center">
-    <div class="font-bold leading-none text-center uppercase col-content xl:col-feature text-squishy text-gray-700/5">Tom side</div>
+  <main class="grid items-center py-12 grid-cols-layout">
+    <div class="font-bold leading-none text-center uppercase col-narrow xl:col-wide text-squishy text-gray-700/5">Tom side</div>
   </main>
 {% endblock %}
