--- a/src/pages/produktoversikt/egen-side.njk
+++ b/src/pages/produktoversikt/egen-side.njk
@@ -11,8 +11,8 @@
   },
   eleventyComputed: {
     title: "{{ product.data.title }}",
-    permalink: "/produktoversikt/{{ product.data.title | slugify }}.html"
-    // permalink: false
+    // permalink: "/produktoversikt/{{ product.data.title | slugify }}.html"
+    permalink: false
   }
 }
 ---
