--- a/src/pages/ettersende-dokumentasjon/ettersende-dokumentasjon.njk
+++ b/src/pages/ettersende-dokumentasjon/ettersende-dokumentasjon.njk
@@ -1,6 +1,6 @@
 ---
 title: 'Ettersende dokumentasjon fra A til Å'
-description: 'Ingress??'
+description: 'Skal du ettersende dokumentasjon til en søknad, klage eller anke? Velg stønaden eller tjenesten det gjelder. Du kan søke eller velge type og område.'
 tags: ['template']
 order: 6
 permalink: '/ettersende-dokumentasjon/'
