--- a/src/pages/produktoversikt/privat/privat.njk
+++ b/src/pages/produktoversikt/privat/privat.njk
@@ -1,6 +1,6 @@
 ---
 title: 'Søknad og skjema fra A til Å'
-description: 'Pengestøtter og tjenester fra NAV for privatpersoner. Du kan søke eller filtrere etter type og område.'
+description: 'Velg pengestøtten eller tjenesten det gjelder. Du kan søke eller velge type og område.'
 tags: ['template']
 order: '5'
 activeRole: "Privat"
