--- a/src/_includes/partials/contentBlocks.njk
+++ b/src/_includes/partials/contentBlocks.njk
@@ -13,7 +13,7 @@
       {{ button(
         {
           text: item.text,
-          href: '#',
+          href: item.href,
           variant: item.variant
         }
       ) }}
