Legge til kontantstøtte

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -30,7 +30,7 @@
     @apply font-semibold text-2xl leading-snug;
   }
   :where(.markdown) > h3 {
-    @apply font-semibold text-xl;
+    @apply font-semibold text-xl leading-snug;
   }
   :where(.markdown) > ul {
     list-style: disc;
