--- a/src/pages/soknad-og-skjema/soknad-og-skjema.njk
+++ b/src/pages/soknad-og-skjema/soknad-og-skjema.njk
@@ -24,16 +24,16 @@ tags: ['template']
         <div class="md:grid md:grid-flow-row-dense md:gap-20 md:grid-cols-[2.2fr_0.8fr]">
           <div class="mb-3 -mx-3 md:col-start-1 md:hidden" x-data="{ stepperOpen: false }" x-bind:class="stepperOpen && 'bg-gray-50 xs:rounded md:bg-transparent'">
             <div class="relative py-3 pr-3 pl-9 fine:hover:bg-blue-50 xs:rounded">
-              <p class="text-sm">Steg 5 av 14</p>
               <div class="flex items-center gap-3 ">
                 <h2 class="text-2xl font-semibold">Arbeidsforhold i EØS</h2>
-                <button class="absolute inset-0 flex items-end px-2 pb-5" x-on:click="stepperOpen = !stepperOpen">
+                <button class="absolute inset-0 flex items-start px-2 pt-4" x-on:click="stepperOpen = !stepperOpen">
                   <span class="sr-only">Vis seksjoner</span>
                   <svg class="flex-none w-6 h-6 pointer-events-none" x-bind:class="stepperOpen && 'rotate-180'" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false" >
                     <path d="M18 9L12 15L6 9" stroke="currentColor" stroke-width="2" />
                   </svg>
                 </button>
               </div>
+              <p class="text-sm">Steg 5 av 14</p>
             </div>
             <div class="px-4 py-3" x-show="stepperOpen">
               <ol class="navds-stepper">
@@ -88,8 +88,8 @@ tags: ['template']
           <div class="mt-6 md:mt-0 md:col-start-1">
             <div class="max-w-prose">
               <div class="hidden mt-6 mb-4 md:block">
-                <p class="text-sm">Steg 5 av 14</p>
                 <h2 class="text-2xl font-semibold">Arbeidsforhold i EØS</h2>
+                <p class="text-sm">Steg 5 av 14</p>
               </div>
 
               <p>NAV har registrert følgende kontaktinformasjon. Du kan gjøre endringer på&nbsp;<strong>Min&nbsp;side</strong>.</p>
